@@ -1,3 +1,8 @@
+2003-04-26  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* mailcheck.c:  Minor HIGification of preferences dialog: 
+	remove separator; fix widget padding.
+	
 2003-04-08  Dennis Cranston <dennis_cranston at yahoo.com>
 
 	* mailcheck.c:  HIGify the preferences dialog. Also,
